# unserlob

./: README.md  configure.ac
m4/: sxe-events.m4
scripts/: lob+pyra+monkey+trend+contra+tech.sh  lob+pyra+monkey+trend+contra.sh  taq-tra.R
src/: Makefile.am  bot.c  bot.h  cabot.c  cabot.yuck  clampbot.c  clampbot.yuck  cloe.c  cloe.yuck  dasbot.c  dasbot.yuck  egobot.c  egobot.yuck  hash.h  hdgbot.c  lobcch.c  lobcch.yuck  lobmon.c  lobmon.yuck  lobot.c  lobot.yuck  lol.c  lol.h  monkey.c  monkey.yuck  pyrabot.c  pyrabot.yuck  roulbot.c  roulbot.yuck  sha.c  sha.h  sock.c  sock.h  techbot.c  techbot.yuck  trendbot.c  trendbot.yuck
